[gd_scene load_steps=5 format=3 uid="uid://bhaif6fyye5rx"]

[ext_resource type="Texture2D" uid="uid://yb31726ijnte" path="res://Sprites/Environment/Floor.png" id="1_jp8rn"]
[ext_resource type="Script" path="res://Scripts/Environment/Floor.gd" id="2_vk1xm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e3ruj"]
size = Vector2(2160, 3840)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdufc"]
size = Vector2(6480, 11520)

[node name="Floor" type="Node2D"]
script = ExtResource("2_vk1xm")

[node name="FloorSprites" type="Node2D" parent="."]

[node name="Floor" type="Sprite2D" parent="FloorSprites"]
z_index = -100
texture = ExtResource("1_jp8rn")

[node name="Floor2" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(720, 0)
texture = ExtResource("1_jp8rn")

[node name="Floor3" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(-720, 0)
texture = ExtResource("1_jp8rn")

[node name="Floor4" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(0, 1280)
texture = ExtResource("1_jp8rn")

[node name="Floor5" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(0, -1280)
texture = ExtResource("1_jp8rn")

[node name="Floor6" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(720, -1280)
texture = ExtResource("1_jp8rn")

[node name="Floor7" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(720, 1280)
texture = ExtResource("1_jp8rn")

[node name="Floor8" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(-720, 1280)
texture = ExtResource("1_jp8rn")

[node name="Floor9" type="Sprite2D" parent="FloorSprites"]
z_index = -100
position = Vector2(-720, -1280)
texture = ExtResource("1_jp8rn")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_e3ruj")

[node name="Destroy" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destroy"]
shape = SubResource("RectangleShape2D_kdufc")

[node name="SpawnPositions" type="Node2D" parent="."]

[node name="X" type="Marker2D" parent="SpawnPositions"]
position = Vector2(2160, 0)

[node name="-X" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-2160, 0)

[node name="Y" type="Marker2D" parent="SpawnPositions"]
position = Vector2(0, 3840)

[node name="-Y" type="Marker2D" parent="SpawnPositions"]
position = Vector2(0, -3840)

[node name="XY" type="Marker2D" parent="SpawnPositions"]
position = Vector2(2160, 3840)

[node name="-XY" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-2160, 3840)

[node name="X-Y" type="Marker2D" parent="SpawnPositions"]
position = Vector2(2160, -3840)

[node name="-X-Y" type="Marker2D" parent="SpawnPositions"]
position = Vector2(-2160, -3840)

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="Destroy" to="." method="_on_destroy_body_exited"]
